--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
         <artifactId>spring-boot-starter-thymeleaf</artifactId>
         <version>LATEST</version>
     </dependency>
+    <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>bootstrap</artifactId>
+        <version>3.2.0</version>
+    </dependency>
+
 
 </dependencies>
 
