--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>Sysc 4806 Project</groupId>
-    <artifactId>4th Year Mgmnt System</artifactId>
-    <version>LATEST</version>
+    <groupId>AKproj</groupId>
+    <artifactId>AddressBook</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
 
 
@@ -44,6 +44,12 @@
         <artifactId>json-path</artifactId>
         <version>LATEST</version>
         <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <scope>test</scope>
+        <version>LATEST</version>
     </dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
