--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,16 @@
             <version>5.1.5.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.1.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.1.3.RELEASE</version>
+        </dependency>
 
     </dependencies>
     <build>
